fixed login layout on mobile and attempted dropdown fix

--- a/views/includes/style.css
+++ b/views/includes/style.css
@@ -224,6 +224,9 @@
 	.nav-profile::after{
 		display:none !important;
 	}
+	.dropdown-toggle::after {
+		display:none !important;
+	}
 
 	.nav-profile-dropdown .dropdown-header{
 		font-size: 1em;
